# cribsheet

./: .crib  .gitignore  .gitmodules  CLAUDE.md.example  DESIGN.md  README.md  _quarto.yml  index.md  pyproject.toml  todos.md
.claude-plugin/: marketplace.json
.github/workflows/: docs-on-change.yml  release-opencode-plugin.yml  release.yml  vendored-drift.yml
crib/: __init__.py  __main__.py  app.py  chunk.py  claudemem.py  cli.py  client.py  codeindex.py  codeindexer.py  codequery.py  codestore.py  config.py  describe_queue.py  embed.py  generate.py  gitbacking.py  indexer.py  learnings.py  memmirror.py  merge.py  notes.py  notestore.py  paths.py  project_services.py  refs.py  retrieve.py  section_index.py  server.py  session.py  sharedserver.py  sources.py  store.py  util.py  versions.py  watch.py
crib/render/: VENDORED.md  __init__.py  __main__.py  cli.py
docs/: code-symbol-index.md  eval-organic-memory.md  generate.toml.example  guide.md  implementation.md  knowledge-capture.md  lsp.json.example  plugin-mcp-registration.md  resume-on-new-machine.md  retrieval-and-adoption.md  surface.md
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/commands/: crib.md
plugins/claude/hooks/: session-end.sh  session-start.sh
plugins/cribsheet-instructions/: instructions.txt
plugins/cribsheet-instructions/.claude-plugin/: plugin.json
plugins/cribsheet-instructions/commands/: crib.md
plugins/cribsheet-instructions/hooks/: session-start.sh
plugins/cribsheet/.claude-plugin/: plugin.json
plugins/cribsheet/hooks/: session-end.sh  session-start.sh
plugins/opencode/: .gitignore  LICENSE  README.md  package.json
plugins/opencode-cribsheet/: package.json
plugins/opencode-cribsheet/src/: index.ts
plugins/opencode/src/: index.ts
scripts/: analyze_consult.py  bump-version.sh  eval_code.cases.json  eval_code.py  eval_fusion.py  eval_hybrid.py  eval_kw.py  eval_retrieval.cases.json  eval_retrieval.py  eval_retrieval.volume.cases.json  eval_rigor.py  gen_notes_gold.py  snapshot_harness.py  sync-vendored.sh
scripts/codeindex/: dump_lsp.lua  lsp_probe.py
scripts/eval_data/: README.md  gold_large.json  kws.json  kws_music-llm.json  kws_svg-mcp.json  notes_gold_large.json  queries_music-llm.json  queries_svg-mcp.json
tests/: test_chunk_config.py  test_claude_memory.py  test_cli_labels.py  test_client.py  test_code_cache.py  test_code_learnings.py  test_codeindex.py  test_core_loop.py  test_corpus_goldens.py  test_curation.py  test_describe_queue.py  test_elaborate.py  test_embed.py  test_eval_retrieval.py  test_forget.py  test_grammar_enum.py  test_import.py  test_insitu_docs.py  test_keyword_refresh.py  test_lexical_cache.py  test_line_map.py  test_merge.py  test_normalize.py  test_notestore_snapshot.py  test_project_resolution.py  test_reconcile.py  test_refs.py  test_rerank.py  test_retrieve.py  test_server_progress.py  test_session.py  test_status.py  test_sync.py  test_watcher.py
tests/goldens/: README.md
tests/goldens/cribsheet/: meta
tests/goldens/cribsheet/symbol_index/: .source_root  crib.__version__.toml  crib.app.Crib.DEDUPE_WARN_SCORE.toml  crib.app.Crib._bump_code_epoch.toml  crib.app.Crib._code_freshness.toml  crib.app.Crib._code_ignore.toml  crib.app.Crib._code_lock.toml  crib.app.Crib._code_tok.toml  crib.app.Crib._code_watched.toml  crib.app.Crib._detect_code_globs.toml  crib.app.Crib._dir_sig.toml  crib.app.Crib._drop_file.toml  crib.app.Crib._ensure_crib.toml  crib.app.Crib._enumerate_code_files.toml  crib.app.Crib._generate_index._bulk.toml  crib.app.Crib._generate_index._match.toml  crib.app.Crib._generate_index._one.toml  crib.app.Crib._generate_index._record.toml  crib.app.Crib._generate_index._section_text.toml  crib.app.Crib._generate_index.toml  crib.app.Crib._index_code_file_tracked.toml  crib.app.Crib._index_project_code.toml  crib.app.Crib._indexed_projects.toml  crib.app.Crib._indexed_relpaths.toml  crib.app.Crib._keyword_terms.toml  crib.app.Crib._nested_project_roots.toml  crib.app.Crib._on_code_change.toml  crib.app.Crib._on_fs_change.toml  crib.app.Crib._project_refs.toml  crib.app.Crib._reconcile_memory_dir.toml  crib.app.Crib._register_code_root.toml  crib.app.Crib._reindex_dirty_code._one.toml  crib.app.Crib._reindex_dirty_code.toml  crib.app.Crib._reload_code.toml  crib.app.Crib._require_code_index.toml  crib.app.Crib._rerank.toml  crib.app.Crib._resident_code.toml  crib.app.Crib._retrieve.toml  crib.app.Crib._revalidate.toml  crib.app.Crib._similar.toml  (+1127 more)
tests/goldens/mcp-companion/: meta
tests/goldens/mcp-companion/symbol_index/: .source_root  combiner.mcp_combiner.__main__.MCPRequestLogMiddleware.dispatch.toml  combiner.mcp_combiner.__main__.MCPRequestLogMiddleware.toml  combiner.mcp_combiner.__main__.TokenRewriteMiddleware.dispatch.toml  combiner.mcp_combiner.__main__.TokenRewriteMiddleware.toml  combiner.mcp_combiner.__main__._ACP_TOKEN_HEADER.toml  combiner.mcp_combiner.__main__._MCP_TOKEN_PATH_RE.toml  combiner.mcp_combiner.__main__._TOKEN_RE.toml  combiner.mcp_combiner.__main__._mcp_log.toml  combiner.mcp_combiner.__main__._signal_handler.toml  combiner.mcp_combiner.__main__.create_app._tristate.toml  combiner.mcp_combiner.__main__.create_app.toml  combiner.mcp_combiner.__main__.logger.toml  combiner.mcp_combiner.__main__.main.toml  combiner.mcp_combiner.__version__.toml  combiner.mcp_combiner.auth._BearerAuth.auth_flow.toml  combiner.mcp_combiner.auth._BearerAuth.toml  combiner.mcp_combiner.auth._DEFAULT_TOKEN_DIR.toml  combiner.mcp_combiner.auth._ENCRYPTION_KEY_ENV.toml  combiner.mcp_combiner.auth._ExpiryAwareAdapter._EXPIRY_COLLECTION.toml  combiner.mcp_combiner.auth._ExpiryAwareAdapter._EXPIRY_KEY.toml  combiner.mcp_combiner.auth._ExpiryAwareAdapter.get_tokens.toml  combiner.mcp_combiner.auth._ExpiryAwareAdapter.set_tokens.toml  combiner.mcp_combiner.auth._ExpiryAwareAdapter.toml  combiner.mcp_combiner.auth._GOOGLE_ACCOUNTS_HOST.toml  combiner.mcp_combiner.auth._GOOGLE_PROBE_TIMEOUT_SECONDS.toml  combiner.mcp_combiner.auth._GOOGLE_USERINFO_URL.toml  combiner.mcp_combiner.auth._ProbeOutcome.INVALID.toml  (+1189 more)
