[project]
name = "cribsheet"
version = "0.1.0"
description = "Local MCP server: markdown memory with a Chroma embedding index"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.5",   # default vector store (embedded PersistentClient)
]

[project.optional-dependencies]
# Recommended real embedder: fastembed runs ONNX models (e.g. bge-small) on the
# onnxruntime chromadb already pulls in — no torch, no CUDA/nvidia. Without it
# crib falls back to the dependency-free hash embedder.
embed = ["fastembed>=0.3"]
# torch-based embedder. The embedder auto-selects CUDA/MPS/CPU at runtime.
# Install torch to match the host BEFORE (or alongside) this extra:
#   nvidia/CUDA : default wheel        -> pip install torch
#   Apple (MPS) : default wheel        -> pip install torch
#   Pi / CPU    : CPU index (no CUDA)  -> pip install torch --index-url \
#                                         https://download.pytorch.org/whl/cpu
st = ["sentence-transformers>=2.2"]
mcp = ["fastmcp>=2.0"]
watch = ["watchdog>=4.0"]
git = []  # uses the `git` CLI via subprocess; no python dep
# Pretty human-readable CLI output: renders note markdown through llmkit's rich
# pipeline (the extracted, shared successor to the old vendored crib/render).
# Sourced from the `vendor/llmkit` git submodule (see [tool.uv.sources]); the CLI
# degrades to raw text when it isn't installed.
render = ["llmkit[md]"]
full = [
    "fastembed>=0.3",
    "fastmcp>=2.0",
    "watchdog>=4.0",
    "llmkit[md]",
]

[project.scripts]
crib = "crib.cli:main"

# llmkit lives in the `vendor/llmkit` git submodule, installed editable from there
# rather than PyPI. `uv sync` / `uv pip install -e .[render]` resolves it via this
# source; for plain pip, run `pip install -e ./vendor/llmkit[md]` first.
[tool.uv.sources]
llmkit = { path = "vendor/llmkit", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
