[project]
name = "cribsheet"
version = "0.1.0"
description = "Local MCP server: markdown memory with a Chroma embedding index"
readme = "README.md"
requires-python = ">=3.11"
# The real product needs all of these — they were "extras" only nominally (the
# code degrades gracefully without each, but that's a testing property, not an
# install profile). fastembed: the recommended embedder, ONNX on the runtime
# chromadb already pulls (no torch). fastmcp: serves MCP AND the warm-daemon
# path the CLI attaches to by default. watchdog: the external-edit watchers.
# llmkit (md: rich CLI rendering; bridge: LLM generation for distill/elaborate/
# describe) is NOT on PyPI: it installs from its git HEAD — every consumer
# (this repo, zsh-ai) floats on the same head, so per-repo pins can't drift.
# The `vendor/llmkit` submodule remains as a READING copy (in-tree xref /
# code-index; `git submodule update --remote` refreshes it) and the editable
# dev source.
dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.5",   # default vector store (embedded PersistentClient)
    "fastembed>=0.3",
    "fastmcp>=2.0",
    "watchdog>=4.0",
    "llmkit[md,bridge] @ git+https://github.com/georgeharker/llmkit",
]

[project.optional-dependencies]
# torch-based embedder — the ONE real extra (torch wheels are host-specific).
# The embedder auto-selects CUDA/MPS/CPU at runtime. Install torch to match
# the host BEFORE (or alongside) this extra:
#   nvidia/CUDA : default wheel        -> pip install torch
#   Apple (MPS) : default wheel        -> pip install torch
#   Pi / CPU    : CPU index (no CUDA)  -> pip install torch --index-url \
#                                         https://download.pytorch.org/whl/cpu
st = ["sentence-transformers>=2.2"]

[project.scripts]
crib = "crib.cli:main"

# uv resolves llmkit from the same git head the direct references name (kept
# explicit here so uv never needs the submodule). Hacking on llmkit itself?
# `uv pip install -e ./vendor/llmkit` overlays the editable copy for the
# session; the next `uv sync` restores the git version.
[tool.uv.sources]
llmkit = { git = "https://github.com/georgeharker/llmkit" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The llmkit extras are direct git references (not on PyPI) — hatchling
# refuses those in metadata unless told they're intentional.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["crib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
