[project]
name = "cribsheet"
version = "0.2.2"
description = "Local MCP server: markdown memory with a Chroma embedding index"
readme = "README.md"
requires-python = ">=3.13"
# The real product needs all of these — they were "extras" only nominally (the
# code degrades gracefully without each, but that's a testing property, not an
# install profile). fastembed: the recommended embedder, ONNX on the runtime
# chromadb already pulls (no torch). fastmcp: serves MCP AND the warm-daemon
# path the CLI attaches to by default; pinned to the v3 line to match mcp-combiner
# so the two are co-installable. watchdog: the external-edit watchers.
# polyllmkit (md: rich CLI rendering; bridge: LLM generation for distill/elaborate/
# describe) is published on PyPI but imports as `llmkit` (dist name != import
# name). The `vendor/llmkit` submodule remains as a READING copy (in-tree xref /
# code-index; `git submodule update --remote` refreshes it) and the editable dev
# source — `uv pip install -e ./vendor/llmkit` overlays it for a session.
dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.5",   # default vector store (embedded PersistentClient)
    "fastembed>=0.3",
    "fastmcp>=3.4.2,<4",
    "watchdog>=4.0",
    "polyllmkit[md,bridge]>=0.1",
]

[project.optional-dependencies]
# torch-based embedder — the ONE real extra (torch wheels are host-specific).
# The embedder auto-selects CUDA/MPS/CPU at runtime. Install torch to match
# the host BEFORE (or alongside) this extra:
#   nvidia/CUDA : default wheel        -> pip install torch
#   Apple (MPS) : default wheel        -> pip install torch
#   Pi / CPU    : CPU index (no CUDA)  -> pip install torch --index-url \
#                                         https://download.pytorch.org/whl/cpu
st = ["sentence-transformers>=2.2"]

[project.scripts]
crib = "crib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
